# esg_graphrag

./: .gitignore  README.md  document.md  main.py  pyproject.toml  rag_pipeline.py  table.html  txt.txt
data/: google_ocr.txt  meta_ocr.txt  nvidia_ocr.txt
notebooks/: 01.OCR.ipynb  01.exploration.ipynb  02.ChunkingToGraph.ipynb  03.GraphRAG.ipynb
