[project]
name = "esg-graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.11.0",
  "hf-xet>=1.2.0",
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "neo4j>=6.0.3",
  "openai>=2.8.1",
  "pymupdf>=1.26.6",
  "sentence-transformers>=5.1.2",
  "streamlit>=1.51.0",
  "torch>=2.5.0",
  "torchvision>=0.20.0",
  "tqdm>=4.67.1",
  "transformers>=4.57.1",
]

#[tool.uv.sources]
#torch = [
#    { index = "pytorch-cu130" },
#]
#torchvision = [
#    { index = "pytorch-cu130" },
#]
#[[tool.uv.index]]
#name = "pytorch-cu130"
#url = "https://download.pytorch.org/whl/cu130"
#explicit = true
